fix: put overflow-x hidden css for sm media query directly in the catalog/search pages instead of general main layout to fix the bug with the chat button twitching

--- a/src/components/layout/layout.sass
+++ b/src/components/layout/layout.sass
@@ -43,4 +43,3 @@
         --os-handle-interactive-area-offset: 2px
     .main
         padding: 0 1em
-        overflow-x: hidden
