--- a/src/components/pages/catalog-page/catalog-page.sass
+++ b/src/components/pages/catalog-page/catalog-page.sass
@@ -3,6 +3,7 @@
 .catalog-page
     display: flex
     margin-top: 2em
+    
     &_loader-container
         height: 100%
         width: 100%
@@ -37,6 +38,7 @@
 
 @media (max-width: 480px) 
     .catalog-page
+        overflow-x: hidden
         font-size: 10px
 
 @media (max-width: 320px) 
